--- a/technotes/centos-practices/2. 서버구축/11. Git.md
+++ b/technotes/centos-practices/2. 서버구축/11. Git.md
@@ -1,1 +1,84 @@
 11. Git
+
+### 설치
+
+1.	의존성 라이브러리
+
+	```
+	# yum install -y curl-devel
+	# yum install -y expat-devel
+	# yum install -y gettext-devel
+	# yum install -y openssl-devel
+	# yum install -y zlib-devel
+	# yum install -y perl-devel
+	```
+
+2.	소스 다운로드
+
+	```
+	# wget https://mirrors.edge.kernel.org/pub/software/scm/git/git-2.9.5.tar.gz
+	# tar xvfz git-2.9.5.tar.gz
+	```
+
+4.	빌드및 설치
+
+	```
+	# cd git-2.9.5
+	# ./configure --prefix=/usr/local/kickscar/git
+	# make all
+	# make install
+	```
+
+5.	설정(/etc/profile)
+
+	```profile
+	# git
+	PATH=/usr/local/kickscar/git/bin:$PATH
+	```
+
+### git 환경 설정
+
+```
+# git config --global user.name "douzone-busan-bitacademy"
+# git config --global user.email "douzone.busan.bitacademy@gmail.com"
+```
+
+### 초간단 사용예
+
+1. 레포지토리 생성및 원격 push
+
+```
+# mkdir centos-practices
+# cd centos-practices
+# git init
+# git add -A
+# git commit -m "first commit"
+# git branch -M main
+# git remote add origin https://github.com/kickscar/centos-practices.git
+# git push -u origin main
+```
+
+2. commit & push
+```
+# git add -A
+# git commit -m "...."
+# git push 
+```
+
+
+
+
+
+
+
+
+
+
+
+  
+
+
+
+
+
+
