--- a/technotes/centos-practices/2. 서버구축/05. MariaDB.md
+++ b/technotes/centos-practices/2. 서버구축/05. MariaDB.md
@@ -1,10 +1,11 @@
 05. MariaDB
 
-## MariaDB
+## 소개
 
 
-## 설치
 
+
+## 설치(Linux, CenOS7+)
 
 ### 의존 라이브러리 설치
 1.	yum 설치 라이브러리
@@ -30,7 +31,7 @@
 
 
 ### mysql 계정 생성
- mariadb 실행은 root가 하지만 mariadb 전용 계정과 그룹이 필요하다.
+ mariadb 실행 계정과 그룹을 생성한다.
  
 ```
 # groupadd mysql
@@ -51,7 +52,7 @@
 2.	빌드
 	설치 위치는 /usr/local/kickscar/mariadb 이다.
 
-	```bash
+	```
 	# cd mariadb-10.1.38 
 	# cmake -DCMAKE_INSTALL_PREFIX=/usr/local/kickscar/mariadb -DMYSQL_USER=mysql -DMYSQL_TCP_PORT=3307 -DMYSQL_DATADIR=/usr/local/kickscar/mariadb/data -DMYSQL_UNIX_ADDR=/usr/local/kickscar/mariadb/tmp/mariadb.sock -DINSTALL_SYSCONFDIR=/usr/local/kickscar/mariadb/etc -DINSTALL_SYSCONF2DIR=/usr/local/kickscar/mariadb/etc/my.cnf.d -DDEFAULT_CHARSET=utf8 -DDEFAULT_COLLATION=utf8_general_ci -DWITH_EXTRA_CHARSETS=all -DWITH_ARIA_STORAGE_ENGINE=1 -DWITH_XTRADB_STORAGE_ENGINE=1 -DWITH_ARCHIVE_STORAGE_ENGINE=1 -DWITH_INNOBASE_STORAGE_ENGINE=1 -DWITH_PARTITION_STORAGE_ENGINE=1 -DWITH_BLACKHOLE_STORAGE_ENGINE=1 -DWITH_FEDERATEDX_STORAGE_ENGINE=1 -DWITH_PERFSCHEMA_STORAGE_ENGINE=1 -DWITH_READLINE=1 -DWITH_SSL=bundled -DWITH_ZLIB=system
 	# make && make install
@@ -59,7 +60,7 @@
 
 	다양한 리눅스 환경에서 빌드가 이루어지기 때문에 빌드 중에 오류가 발생할 수 있다. 오류를 수정하고 다시 빌드 하기위해서는 오류가 나기전 캐시된 빌드 정보를 지우고 다시 빌드할 것을 추천한다.
 
-	```bash
+	```
 	# rm -f CMakeCashe.txt
 	```
 
@@ -81,47 +82,47 @@
 	
 3.	기본 데이터베이스 생성
 
-	```bash
+	```
 	/usr/local/kickscar/mariadb/scripts/mysql_install_db --user=mysql --basedir=/usr/local/kickscar/mariadb --defaults-file=/usr/local/kickscar/mariadb/etc/my.cnf --datadir=/usr/local/kickscar/mariadb/data
 	```
 	
 4.	tmp 디렉토리 생성
 
-	```bash
+	```
 	# mkdir /usr/local/kickscar/mariadb/tmp
 	# chown mysql:mysql /usr/local/kickscar/mariadb/tmp 
 	```
 	
 5.	최초 서버 실행
 
-	```bash
+	```
 	# /usr/local/kickscar/mariadb/bin/mysqld_safe &
 	# ps -ef | grep mysql
 	```
 
 6.	root 비밀번호 설정
 
-	```bash
+	```
 	# /usr/local/kickscar/mariadb/bin/mysqladmin -u root password '비밀번호'
 	```
 	
 7.	접속 테스트
 
-	```bash
+	```
 	# /usr/local/kickscar/mariadb/bin/mysql -p
 	```
 
 ### 서비스 등록
 
- 서비스 등록 파일(mariadb.service)를 에디팅한다.
+ 서비스 등록 스크립트 mariadb.service를 작성한다.
 
 ```
 # vi /etc/systemd/system/mariadb.service
 ```
 
- 서비스 등록파일의 내용은 다음과 같다.
+ 서비스 등록 스크립트의 내용은 다음과 같다.
 
-```service
+```sh
 [Unit]
 Description=MariaDB Database Server
 After=syslog.target
@@ -163,10 +164,9 @@ WantedBy=multi-user.target
  
 ```
 # systemctl start mariadb
+# systemctl restart mariadb
 # systemctl stop mariadb
-# systemctl start mariadb
 ```
-
 
 ### 간단한 DCL 연습
 
@@ -178,7 +178,7 @@ WantedBy=multi-user.target
 
  /etc/profile에 다음 내용을 참고해서 수정한다.
  
-```profile
+```sh
 # mariadb
 export PATH=$PATH:/usr/local/kickscar/mariadb/bin
 ```
