--- a/technotes/centos-practices/2. 서버구축/06. PostgreSQL.md
+++ b/technotes/centos-practices/2. 서버구축/06. PostgreSQL.md
@@ -1,100 +1,117 @@
 06. PostgreSQL
 
-1. 의존성 라이브러리 설치
-```bash
+## 소개
+
+
+
+## 설치(Linux, CenOS7+)
+
+###	의존 라이브러리 설치
+
+```
 # yum -y install readline-devel.x86_64 python-devel
 ```
 
-
-2. postgres 계정 만들기
-```bash
+### postgresql 계정 생성
+ postgresql의 실행 계정과 그룹을 생성한다.
+ 
+```
 # groupadd postgres
 # adduser -M -g postgres postgres
 ```
 
+### 컴파일 및 빌드
+
+1.	소스(v12.5) 다운로드
+
+	```
+	# wget https://ftp.postgresql.org/pub/source/v12.5/postgresql-12.5.tar.gz
+	# tar xvfz postgresql-12.5.tar.gz
+	# cd postgresql-12.5
+	```
+
+2.	빌드 환경 설정
+
+	```
+	# ./configure --prefix=/usr/local/kickscar/pgsql --with-python --with-openssl --enable-nls=ko
+	```
+
+3.	빌드 및 설치
+
+	```
+	# make && make install
+	```
+
+
+### 설정
+
+1.	설치 디렉토리 및 파일 소유자 변경
+
+	```
+	# chown -R postgres:postgres /usr/local/kickscar/pgsql
+	```
+
+2.	환경설정
+
+	```
+	# vi /etc/profile
+	```
 	
-3. 다운로드
-https://www.postgresql.org/ftp/source/v12.5/
+	postgresql 디렉토리를 환경변수로 등록하고 실행 바이너리의 PATH를 설정한다.
+
+	```sh
+	# postgres
+	export POSTGRES_HOME=/usr/local/kickscar/pgsql
+	export PGLIB=$POSTGRES_HOME/lib
+	export PGDATA=$POSTGRES_HOME/data
+	export PATH=$PATH:$POSTGRES_HOME/bin
+	```
+
+3.	기본 database 생성
+
+	```
+	# sudo -u postgres /usr/local/kickscar/pgsql/bin/initdb -E UTF8 --locale=ko_KR.UTF-8 /usr/local/kickscar/pgsql/data
+	```
 
 
+4.	최초 서버 실행
 
-4. 빌드 환경
-```bash
-# ./configure --prefix=/usr/local/kickscar/pgsql --with-python --with-openssl --enable-nls=ko
+	```
+	# sudo -u postgres /usr/local/kickscar/pgsql/bin/pg_ctl -D /usr/local/kickscar/pgsql/data -l /usr/local/kickscar/pgsql/data/logfile start
+	```
+
+5.	비밀번호 설정
+
+	```
+	# psql -U posgres
+
+	postgres=# alter user postgres with password 'postgres';
+	postgres=# \q
+
+	# vi /usr/local/kickscar/pgsql/data/pg_hba.conf
+	```
+	
+	pg_hba.conf에 psotgres 관리권한 사용자의 local 접근을 허용한다.
+
+	```sh
+	# TYPE  DATABASE        USER            ADDRESS                 METHOD
+
+	# "local" is for Unix domain socket connections only
+	local   all             psotgres                                password
+	```
+
+
+### 서비스 등록
+
+서비스 등록 스크립트 postgres.service를 작성한다.
+
 ```
-
-
-5. 빌드 및 설치
-```bash
-# make && make install
-```
-
-
-6. 설치 디렉토리 및 파일 소유자 변경
-```bash
-# chown -R postgres:postgres /usr/local/kickscar/pgsql
-```
-
-
-7. 환경설정
-```bash
-# vi /etc/profile
-```
-
-============================================
-```sh
-# postgres
-export POSTGRES_HOME=/usr/local/kickscar/pgsql
-export PGLIB=$POSTGRES_HOME/lib
-export PGDATA=$POSTGRES_HOME/data
-export PATH=$PATH:$POSTGRES_HOME/bin
-```
-============================================
-
-
-
-8. 기본 database 생성
-```bash
-# sudo -u postgres /usr/local/kickscar/pgsql/bin/initdb -E UTF8 --locale=ko_KR.UTF-8 /usr/local/kickscar/pgsql/data
-```
-
-
-9. 실행
-```bash
-# sudo -u postgres /usr/local/kickscar/pgsql/bin/pg_ctl -D /usr/local/kickscar/pgsql/data -l /usr/local/kickscar/pgsql/data/logfile start
-```
-
-
-
-10. 비밀번호 설정
-```bash
-# psql -U posgres
-
-postgres=# alter user postgres with password 'postgres';
-postgres=# \q
-
-# vi /usr/local/kickscar/pgsql/data/pg_hba.conf
-```
-
-========================================================================================
-```conf
-# TYPE  DATABASE        USER            ADDRESS                 METHOD
-
-# "local" is for Unix domain socket connections only
-local   all             psotgres                                password
-```
-========================================================================================
-
-
-
-
-11. 서비스 등록
-```bash
 # vi /usr/lib/systemd/system/postgres.service
 ```
 
-========================================================================================
-```service
+ 서비스 등록 스크립트의 내용은 다음과 같다.
+
+```sh
 # Systemd service definition for postgresql-bdr94
 # 
 # It's not recommended to modify this file in-place, because it will be
@@ -146,104 +163,112 @@ TimeoutSec=300
 [Install]
 WantedBy=multi-user.target
 ```
-========================================================================================
 
-```bash
+ 서비스 등록은 systemctl 명령어를 사용한다.
+
+```
 # systemctl enable postgres
-# systemctl start postgres
 # systemctl status postgres
 ```
 
+ 서비스 시작, 중지 그리고 재시작 명령은 다음과 같다. 테스트 해보자.
 
-
-11. 기본 명령어 연습하기
-
-1) 버젼 확인:
-```bash
-postgres=# select version();
+```
+# systemctl start postgres
+# systemctl restart postgres
+# systemctl stop postgres
 ```
 
-2) 도움말:
-```bash
+
+## 기본 명령어 연습
+
+### psql 실행 및 종료
+
+1.	실행
+
+```
+# psql -U posgres
+postgres 사용자의 암호:
+```
+
+2. 버젼 확인
+
+```
+postgres=# select version();
+version                                                 
+---------------------------------------------------------------------------------------------------------
+ PostgreSQL 12.5 on x86_64-pc-linux-gnu, compiled by gcc (GCC) 4.8.5 20150623 (Red Hat 4.8.5-44), 64-bit
+```
+
+3.	도움말
+
+```
 postgres=# \?
 ```
 
-3) shell 명령어:
-```bash
-postgres=# \! command
+4. shell 명령어 실행
+
+```
+postgres=# \! uname
 ```
 
-4) 종료:
-```bash
+5.	종료
+
+```
 postgres=# \q
 ```
 
-5) webdb 데이터베이스 생성
-```bash
-postgres=# create database webdb;
-postgres=# \l
-postgres=# \c webdb
-postgres=# \dt
-```
 
-6) 테이블 생성
-```bash
-webdb=# create table pet(
-webdb(# name varchar(20), 
-webdb(# owner varchar(20),
-webdb(# species varchar(20),
-webdb(# gender char(1),
-webdb(# birth date,
-webdb(# death date);
-webdb=# \d pet
-```
+### 기본 DCL
 
-7) 테이블 삭제
-```bash
-webdb=# drop table pet;
-```
+1.	데이터베이스 생성
 
-8) 사용자 생성
-```bash
-postgres=# create user webdb with password 'webdb';
-```
+	```
+	postgres=# create database webdb;
+	postgres=# \l
+	postgres=# \c webdb
+	postgres=# \dt
+	```
 
-9) 권한부여
-```bash
-postgres=# grant all privileges on all tables in schema public to webdb;
-postgres=# \dn
-```
+2.	사용자 생성
 
-10) 연결 설정
-```bash
-# vi /usr/local/kickscar/pgsql/pg_hba.conf
-```
+	```
+	postgres=# create user webdb with password 'webdb';
+	```
 
-========================================================================================
-```conf
-# TYPE  DATABASE        USER            ADDRESS                 METHOD
+3.	권한부여
 
-# "local" is for Unix domain socket connections only
-local   webdb           webdb                                   password
-```
-========================================================================================
+	```
+	postgres=# grant all privileges on all tables in schema public to webdb;
+	postgres=# \dn
+	```
 
+4.	연결 설정
 
-11) 테이블 소유자 변경
-```bash
-postgres=# alter table pet owner to webdb;
-```
+	```
+	# vi /usr/local/kickscar/pgsql/pg_hba.conf
+	```
+	
+	webdb 사용자의 local 접근을 허용하는 내용은 다음과 같다.
 
-12) 외부 연결
-```bash
-vi /cafe24/pgsql/data/postgresql.conf
-```
+	```sh
+	# TYPE  DATABASE        USER            ADDRESS                 METHOD
 
-========================================================================================
-```conf
-listen_addresses = '*'
-```
-========================================================================================
+	# "local" is for Unix domain socket connections only
+	local   webdb           webdb                                   password
+	```
+
+	외부 연결을 위해서는 local 대신 특정 IP를 위와 같은 방식으로 허용하면 된다. 단, postgresql.conf에서 외부 연결 요청을 accept하기 위해 다음 설정을 해야한다.
+	
+	```
+	vi /cafe24/pgsql/data/postgresql.conf
+	```
+
+	listen_addresses 항목을 다음과 같이 설정한다.
+	
+	```sh
+	listen_addresses = '*'
+	```
 
 
 
