--- a/technotes/centos-practices/2. 서버구축/06. PostgreSQL.md
+++ b/technotes/centos-practices/2. 서버구축/06. PostgreSQL.md
@@ -258,7 +258,7 @@ postgres=# \q
 	local   webdb           webdb                                   password
 	```
 
-	외부 연결을 위해서는 local 대신 특정 IP를 위와 같은 방식으로 허용하면 된다. 단, postgresql.conf에서 외부 연결 요청을 accept하기 위해 다음 설정을 해야한다.
+	외부 연결을 위해서는 local 대신 host TYPE으로 설정하고 특정 IP를 ADDRESS 위치에 허용한다. 단, postgresql.conf에서 외부 연결 요청을 accept하기 위해 다음 설정을 해야한다.
 	
 	```
 	vi /cafe24/pgsql/data/postgresql.conf
