--- a/_technotes/centos-practices/2. 서버구축/07. Nginx(Reverse Proxy).md
+++ b/_technotes/centos-practices/2. 서버구축/07. Nginx(Reverse Proxy).md
@@ -2,19 +2,17 @@
 
 ## 소개
 
-세계 4억 5천여개에 달하는 웹사이트가 Nginx를 통해 서비스할 정도로 2002년, 첫 버전이 출시된 이 후로 괄목할 만한 성장세를 보이고 있는 오픈소스 웹서버 소프트웨어다. 현재(2021년, 8월) 아파치(Apache) 웹서버와 시장을 동등한 수준으로 양분하고 있지만 새로운 서비스들이 Nginx를 선택하고 있는 추세이고 기존 아파치 웹서버에서 마이그레이션도 꾸준히 증가하고 있기 때문에 조만간 앞지를 것이다.
+2002년에 첫 버전이 출시되었고 지금(2021년 9월)은 세계 4억 5천여개에 달하는 웹사이트가 Nginx를 통해 서비스할 정도로 괄목할 만한 성장세를 보이고 있는 오픈소스 웹서버 소프트웨어다. 현재(2021년, 9월) 아파치(Apache) 웹서버와 시장을 동등한 수준으로 양분하고 있는 상태지만 새로운 서비스들이 Nginx를 선택하고 있는 추세이고 기존 아파치 웹서버에서 마이그레이션도 꾸준히 증가하고 있기 때문에 조만간 앞지를 것으로 전망된다.
 
-이러한 인기의 이유에는 최초, 이고르 시쇼브(Игорь Сысоев) 1가볍고 2강력한 웹서버 개발을 목표로
-...
-1쉬운 설치와 2고성능 트랙픽 처리로 결론내자.
+이러한 인기의 이유에는 최초, 이고르 시쇼예프(Igor Sysoev) 1가볍고 2강력한 웹서버 개발을 목표로 ~~어쩌고저쩌고 1쉬운 설치와 2고성능 트랙픽 처리로 결론내자.
 
-1.  너무 많은 Apache 웹서버(httpd)의 확장 모듈... -> 기본 모듈도 보통 서비스에서 다 사용하지 않기 때문에 서버 리소스만 낭비한다.
-2.  Apache 웹서버의 필수 모듈보다 빠르다.
-3.  Apache httpd의 데몬 스레드 혹은 포크(프로세스)기반의 구조 대신 비동기 이벤트 기반의 구조
-4.  웹서버 뿐만 아니라 단순한 프록시 역할을 넘어 고성능 로드 밸런서, 리버스 프록시, API 게이트웨이등 MSA(마이크로서비스) 아키텍처와 클라우드 환경에 최적화된 웹서버로 아파치 웹서버와 분명한 차별성을 가지고 있다.
-5.  콘텐츠 캐싱을 통한 원본 서버의 부하를 혁신적으로 감소하는 것도 큰 장점
+1.너무 많은 Apache 웹서버(httpd)의 확장 모듈... -> 기본 모듈도 보통 서비스에서 다 사용하지 않기 때문에 서버 리소스만 낭비한다.
+2.Apache 웹서버의 필수 모듈보다 빠르다.
+3.Apache httpd의 데몬 스레드 혹은 포크(프로세스)기반의 구조 대신 비동기 이벤트 기반의 구조
+4.웹서버 뿐만 아니라 단순한 프록시 역할을 넘어 고성능 로드 밸런서, 리버스 프록시, API 게이트웨이등 MSA(마이크로서비스) 아키텍처와 클라우드 환경에 최적화된 웹서버로 아파치 웹서버와 분명한 차별성을 가지고 있다.
+5.콘텐츠 캐싱을 통한 원본 서버의 부하를 혁신적으로 감소하는 것도 큰 장점
 
-Subjects...(아마도 이런 주제들? 토픽들?)
+Subjects...(아마도 이런 주제들...)
 
 part0. Authentication and Security Control
 part1. Load Balancing
@@ -22,7 +20,7 @@ part2. Traffic Management
 part3. Caching
 part4. Automation
 
-Technical Terms(아니면, 이런 기술들?)
+Technical Terms(아니면, 이런 기술들...)
 HTTP/2,
 WebSocket,
 Media Streaming,
@@ -31,6 +29,8 @@ Monitoring,
 Debugging,
 Performance,
 Operational Tips
+
+
 
 ## 설치(CentOS7+)
 
@@ -41,14 +41,16 @@ Operational Tips
     ```sh
     # 	저장소 디스크립션 파일 nginx.repo를 생성한다.
     vi /etc/yum.repos.d/nginx.repo
-    ``````sh
+   
     # 내용은 다음과 같다.	
     [nginx]
     name=nginx repo
     baseurl=http://nginx.org/packages/mainline/centos/7/$basearch/
     gpgcheck=0
     enabled=1
+	
     ```
+	
 2.  설치
     
     ```sh
@@ -56,20 +58,25 @@ Operational Tips
     
     # 설치 상태를 확인한다.
     ngnix -v
-    ```
+    
+	```
+	
 3.  서비스 등록
     
     ```sh
     systemctl enabled nginx
+	
     ```
 
 ### 소스 컴파일 설치
+
+
 
 ## 서버 실행
 
 ```sh
 systemctl start nginx
-``````sh
+
 # 데몬 프로세스 확인
 ps -ef | grep nginx
 
@@ -106,12 +113,12 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 
 ```
 
-문제가 없다면, 기본 HTML 문서인 nginx 환영메세지(Welcome to nginx!)가 보일 것이다.
+ 문제가 없다면, 기본 HTML 문서인 nginx 환영메세지(Welcome to nginx!)가 보일 것이다.
+
 
 ## Nginx 기본
 
 ### 주요 명령어
-
 1.  버전 및 빌드 확인
     
     ```sh
@@ -162,44 +169,54 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
     설정 파일들이 위치하는 디렉토리이다.
     
 2.  /etc/nginx/nginx.conf    
-    - nginx의 기본 설정 파일로 다음에 언급하는 하위 설정들의 최상위 설정(http)이다.        
-    - 워커 프로세스 개수, 튜닝, 동적 모듈 로딩과 같은 전역 설정을 할 수 있다.        
-    - 서브(하부) 설정의 entry 역할을 한다.
+    - nginx의 기본 설정 파일로 다음에 언급하는 하위 설정들의 최상위 설정(http)이다.
         
-        ```
+		```sh
         http {
-            include       /etc/nginx/mime.types;
-            default_type  application/octet-stream;
-        
-            [...skip..]
-        
-            include /etc/nginx/conf.d/*.conf;
+		
+			# virtual host01
+			server {			
+
+			# virtual host02
+			server {			
+			}
+		
+		}
+        ```
+		
+	- 보통, 최상위 http{...} 블록에 워커 프로세스 개수, 튜닝, 동적 모듈 로딩과 같은 전역 설정을 한다.        
+    - Virtual Host server{...} 서브 블록의 entry 역할을 한다.
+
+		```sh
+        http {
+            
+			include /etc/nginx/conf.d/host01.conf;
+			include /etc/nginx/conf.d/host02.conf;
+			
+			# or
+			
+			include /etc/nginx/conf.d/*.conf;
         }
         ```
 		
     - 세부적인 개별적 설정들을 include 구문을 활용해 구조화한다.
         
-3.  /etc/nginx/conf.d
-    
-    - 디렉토리 내의 .conf 설정파일들은 상위 전역 설정 nginx.conf의 http {...} 블록에 포함된다.
+3.  /etc/nginx/conf.d    
+    - 디렉토리 내의 .conf 설정 파일들은 상위 nginx.conf의 전역설정 http {...} 블록에 포함된다.
     - 기존의 site-enabled 디렉토리 내의 설정파일에 대한 site-available 내의 심볼 링크 파일 방식의 설정은 사용하지 않는다.
+	- 실습I와 실습II는 디렉토리 내의 .conf 설정 파일들을 통해 Virtual Host 설정에 대한 예제이다.
+
 4.  /var/log/nginx
     로그가 저장되는 디렉토리로 access.log와 error.log 가 있다. 만일 debug 모듈이 활성화 되었다면 디버깅 정보도 로그파일에 기록된다.
     
 
-## 실습I: 정적 콘텐츠 서비스하기
+
+## 실습I: 정적 콘텐츠 서비스
+ 정적 콘텐츠 기반의 웹 사이트 서비스를 위한 설정을 실습해 본다.
 
 ### 정적 콘텐츠
-
-정적 콘텐츠 기반의 웹 사이트 서비스를 위한 설정을 실습해 본다.
-
-1.  정적 콘텐츠
-    
-    - nginx rpm 설치 기본 웰컴 문서는 /usr/shared/nginx/html/index.html이다. 이를 변경할 것이다.
-        
-    - 실습 웹사이트의 정적 콘텐츠 리소스와 로그 등을 저장하는 루트 디렉토리는 /usr/local/kickscar/www 이다.
-        
-    - www 아래, 사이트 구조는 비교적 간단하다.
+1.	nginx rpm 설치 기본 웰컴 문서는 /usr/shared/nginx/html/index.html이다. 이를 변경할 것이다.
+2.	사이트 구조
         
 	<pre>
 	/www
@@ -210,53 +227,244 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 		|--- /logs
 	</pre>
 	
-2.  설정
-    nginx 설치 시, 기본으로 설정된 /etc/nginx/conf.d/default.conf에 실습 사이트를 설정한다.
+	- 사이트의 정적 콘텐츠 리소스와 로그 등을 저장하는 루트 디렉토리는 /usr/local/kickscar/www 이다.
+	
+### 설정
+ /etc/nginx/conf.d/default.conf에 실습 사이트의 Virtual Host 설정을 한다.
    
-	```sh
-	server {
-    	listen       80  default_server;
-		server_name  www.kickscar.me;
-			
-		# access log
-		access_log   /usr/local/kickscar/www/logs/access.log  main;
-			
-		location / {
-			root   /usr/local/kickscar/www/htdocs;
-			index  index.html index.htm;
-		}
-			
-		# error 404
-		error_page	404  /404.html;
-    	location = /404.html {
-        	root   /usr/local/kickscar/www/htdocs/error;
-    	}
-				
-		# error 50x
-		error_page	500 502 503 504  /50x.html;
-    	location = /50x.html {
-        	root   /usr/local/kickscar/www/htdocs/error;
-    	}
-	}
-	```
+```sh
+server {
+    listen       80  default_server;
+    server_name  www.kickscar.me;
+
+    # root directory for virtual server
+    root /usr/local/kickscar/www/htdocs;
+
+	# access log
+    access_log   /usr/local/kickscar/www/logs/access.log  main;
+
+    # 여러 index 파일 설정
+    location / {
+        index  index.html index.htm;
+    }
+
+    # 디렉토리 리스팅 off(default): 이 location 블록은 필요 없음.
+    location /assets/images/ {
+        autoindex off;
+    }
+
+    # error 404: normal error page
+    error_page  404  /error/404.html;
+
+    # error 403: redirection
+    error_page  403  /403_redirect;
+    location = /403_redirect {
+        return 301 /;
+    }
+
+    # error 50x: multiple 500-level errors
+    error_page  500 502 503 504  /error/50x.html;
+}
+```
 		
-3.	설정 테스트
+### 테스트
 
-	```sh
-	nginx -T
+```sh
 		
-	ginx: the configuration file /etc/nginx/nginx.conf syntax is ok
-	nginx: configuration file /etc/nginx/nginx.conf test is successful
-	configuration file /etc/nginx/nginx.conf:
+nginx -T
+nginx: the configuration file /etc/nginx/nginx.conf syntax is ok
+nginx: configuration file /etc/nginx/nginx.conf test is successful
+configuration file /etc/nginx/nginx.conf:
 
-	[...skip...]
+[...skip...]
 		
-	```
+```
 
-4.	설정 적용
+### 서버 설정 리로드
 
-	```sh
-	nginx -s reload
+```sh
+nginx -s reload
+	
+```
+ 
+ 실행 중인 서버를 정지하지 않고 변경된 설정을 리로드(Reload)한다. 따라서 Nginx는 패킷 무손실 서버 설정 변경이 가능하다. 이는 고가용성 확보를 위한 부하분산 설정에서 무중단으로 서버의 설정을 지속적으로 해야 하는 경우에 매우 유용한 옵션이다. 
+	
+
+## 실습II: Reverse Proxy 설정
+ HTTP 또는 다른 통신(응용)프로토콜 기반의 서버에 대한 프록시(Reverse Proxy) 설정을 실습한다. Nginx가 HTTP 요청을 먼저 받고 그 요청을 프록시 대상이 되는 서버로 전달(pass)하는 방법이다. 보통, 고가용성 서비스 구성에서 부하를 여러 대의 서버로 분산시킬 때 프록싱(Proxing)을 하게 되는데 Nginx의 리버스 프록시가 그 역할을 할 수 있다.
+ 
+### 프록시 대상 서버(Proxied Server)
+1.	Nginx가 프록시할 대상 서버가 있어야 한다. 다음의 간단한 Node Server로의 요청을 Nginx가 프록시한다.
+2.	index.js: proxied-blog-server
+	
+	```js
+	const http = require('http');
+	const port = 9099;
+
+	const server = http.createServer((req, resp) => {
+		resp.writeHead(200, {'Content-Type': 'text/html'});
+		resp.end('<h1>Blog Server Proxied!</h1>');
+		resp.end('\n');		
+	});
+	server.listen(port, '127.0.0.1', () => console.log(`Proxied Blog Server Running on Port ${port}`));
 	```
 	
-	실행 중인 서버를 정지하지 말고 변경된 설정을 서버에 리로드(Reload) 한다. 이는 패킷 무손실롤 서버 설정 변경이 가능하기 때문에 고가용성 확보를 위한 부하분산 서버 설정을 무중단 동적 변경을 가능하게 한다.  
+	- 포트 9090로의 로컬 요청만 응답하도록 작성되었다.
+	- 이름을 Blog Server라 하였는데, 실습을 위해 실제 블로그 서버가 아닌 간단한 HTML만 응답하도록 작성하였다.
+	
+3.	local 연결 테스트
+	
+	```sh
+	node index.js &
+	curl -I 127.0.0.1:9099
+	
+	HTTP/1.1 200 OK
+	Content-Type: text/html
+	Date: Fri, 17 Dec 2021 04:36:02 GMT
+	Connection: keep-alive
+	Keep-Alive: timeout=5
+	```
+
+### 설정
+ /etc/nginx/conf.d/proxied-blog.conf에 다음과 같이 프록시 설정을 한다.
+
+```sh
+server {
+    listen       80;
+    server_name  blog.kickscar.me;
+
+    location / {
+        proxy_pass http://127.0.0.1:9099;
+    }
+}
+```
+- blog.kickscar.me 도메인 접근에 대한 Virtual Host 설정이다. 앞의 정적 콘텐츠 서비스와 다른점은 location 블록이다.
+- location parameter가 / 이므로 blog.kickscar.me로 들어오는 모든 요청을 프록시 대상 서버로 전달(pass)하게 된다.
+- 프록시 대상 서버로의 전달 요청은 proxy_pass 파라미터로 설정해 놓은 localhost의 9099로 HTTP 요청이다. 즉, 실습을 위해 작성하고 시작한 프록시 대상 서버(블로그 서버)에 요청을 전달하게 된다.
+
+### 테스트
+ 테스트는 외부 브라우저 또는 curl 명령어로 해야 하지만 로컬에서도 가능하다.
+ 
+```sh
+curl blog.kickscar.me
+
+# 본문 내용 응답
+<h1>Blog Server Proxied!</h1>
+```
+
+### 요청 헤더 전달 I: host
+
+1.	실습을 위해 proxied-blog-server에 다음 한 줄을 추가한다.
+
+	```js
+	const server = http.createServer((req, res) => {
+		console.log(`host: ${req.headers['host']}`);	
+
+		[...skip...]
+
+	});
+	```
+	 'blog.kickscar.me'로 요청하면 다음과 같이 header의 host 값이 출력되는 것을 볼 수 있다. 
+
+	```sh
+	curl blog.kickscar.com
+	
+	# 서버 출력
+	host: 127.0.0.1:9099
+	
+	# 본문 내용 응답
+	<h1>Blog Server Proxied!</h1>
+	```
+	
+	Nginx가 프록시를 하기 때문에 proxy_pass로 설정한 host가 출력되는 것이다. 이를 Nginx에서 설정한 Virtual Host 'blog.kickscar.me(:80)'로 전달해 주어야 한다.
+
+2.	host header 설정
+
+	```sh
+	server {
+		listen       80;
+		server_name  blog.kickscar.me;
+
+		location / {
+			# proxy_set_header directive를 사용하고 Host(host) header에 $host 변수 값을 세팅한다.	
+			proxy_set_header Host $host;
+			
+			proxy_pass http://127.0.0.1:9099;
+		}
+	}
+	```
+
+	Nginx를 리로드하고 다시 요청하면 다음과 같이 출력되는 것을 볼 수 있다.
+	
+	```sh
+	curl blog.kickscar.com
+	
+	# 서버 출력
+	host: blog.kickscar.me
+	
+	# 본문 내용 응답
+	<h1>Blog Server Proxied!</h1>
+	
+	```
+
+ 
+### 요청 헤더 전달 II: X-Real-IP
+1.	Remote Address
+	서버 애플리케이션 작성 방법(node, php, j2ee, ...)에 따라 Remote Address를 얻는 방법은 다양하다. 보통, Node 서버 애플리케이션에서는 다음과 같은 방법으로 얻을 수 있다.
+	
+	```js
+	const server = http.createServer((req, res) => {
+		console.log(`Remote Address: ${req.connection.remoteAddress}`);
+		
+		[...skip...]
+		
+	});
+	```
+	
+	Remote Address는 원래 요청 헤더에 포함되지 않는다. 그리고 서버 애플리케이션마다 Remote Address를 얻는 방법이 다른 이유는 애플리케이션과 연동되는 서버, 미들웨어 또는 플랫폼에서 제공해 줄 수 있는 정보이기 때문이다. 따라서 프록시 대상이 되는 다양한 서버 애플리케이션에 이 정보를 전달해 주기 위해서 Ngnix는 X-Real-IP 헤더를 추가하여 Remote Address 정보를 전달한다. 
+
+2.	proxied-blog-server에 다음 한 줄을 추가한다.
+
+	```js
+	const server = http.createServer((req, res) => {
+		console.log(`x-real-ip: ${req.headers['x-real-ip']}`);	
+
+		[...skip...]
+
+	});
+	```
+	
+3.	X-Real-IP header 설정	
+
+	```sh
+	server {
+		listen       80;
+		server_name  blog.kickscar.me;
+
+		location / {
+			# $remote_addr 변수를 사용한다.
+			proxy_set_header X-Real-IP $remote_addr;
+			
+			proxy_pass http://127.0.0.1:9099;
+		}
+	}
+	```
+
+	Nginx를 리로드하고 다시 요청하면 다음과 같이 출력되는 것을 볼 수 있다.
+	
+	```sh
+	curl blog.kickscar.com
+	
+	# 서버 출력
+	host: blog.kickscar.me
+	remote adress: 127.0.0.1
+	x-real-ip: 49.247.9.194
+	
+	# 본문 내용 응답
+	<h1>Blog Server Proxied!</h1>	
+	```
+	
+	
+	
+ 
+ 
