--- a/_technotes/centos-practices/2. 서버구축/03. Node.js.md
+++ b/_technotes/centos-practices/2. 서버구축/03. Node.js.md
@@ -194,7 +194,7 @@
     
 	cd node-v14.4.0
 	./configure --prefix=/usr/local/kickscar/node-v14.4.0
-    make & make install
+    make && make install
 	
     ```
 
